--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ idna==3.4
 multidict==6.0.4
 numpy==1.26.1
 packaging==23.2
+prettytable==3.9.0
 PyYAML==6.0.1
 regex==2023.10.3
 requests==2.31.0
@@ -21,4 +22,5 @@ tqdm==4.66.1
 transformers==4.34.1
 typing_extensions==4.8.0
 urllib3==2.0.7
+wcwidth==0.2.8
 yarl==1.9.2
